@@ -1,11 +1,4 @@
 #Guess Game
-Its OOP1 Assignment
+OOP2 Assignment
 
-Aiming to write mini guessing game in console. Questions will be stored separatley in text file. User has 3 or 4 lives
-and maybe game ladder. 
-I'll try to cover OOP1 assignment related pullet points and comment them in code.
-compiled with java 23
-
-from command line cd into /GuessGame folder and start with
-java --enable-preview -cp bin entry.Guess
-
+Guessing Game output is aimed to use GUI 
